--- a/harris.ipynb
+++ b/harris.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,9 @@
     "dilated = cv2.dilate(sk, kernel)\n",
     "eroded = cv2.erode(dilated, kernel)\n",
     "sk2 = cv2.ximgproc.thinning(eroded, thinningType = cv2.ximgproc.THINNING_ZHANGSUEN)\n",
-    "show_image(sk2, \"Czyszczenie szkieletu\", cmap='gray')"
+    "show_image(sk2, \"Czyszczenie szkieletu\", cmap='gray')\n",
+    "\n",
+    "save_image(sk2, \"thinned.png\")"
    ]
   },
   {
