--- a/skeletonization.ipynb
+++ b/skeletonization.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metody i algorytmy wyszukiwania ścieżek w grafie w zastosowaniu do przetwarzania obrazów\n",
+    "\n",
+    "Celem projektu jest ekstrakcja obiektów liniowych z obrazu i przedstawienie ich w postaci grafu. Obrazem wejściowym może być dowolny obraz zawierający struktury pozwalające przedstawić się za pomocą grafu. Przykładem użytym w tej pracy jest obraz przedstawiający sieć dróg."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pierwszym krokiem jest zaimportowanie odpowiednich bibliotek, które będą wykorzystywane w dalszej części skryptu:\n",
+    "+ numpy - służy do przedstawiania danych (w tym obrazów) za pomocą tablic wielowymiarowych\n",
+    "+ openCV - biblioteka obsługująca przetwarzenie obrazów\n",
+    "+ matplotlib - pozwala na wyświetlanie obrazów"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,9 +27,25 @@
    "source": [
     "import numpy as np\n",
     "import cv2\n",
-    "import itertools\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definiowane są funkcje pomocnicze:\n",
+    "+ load_image - ładuje obraz z dysku do pamięci\n",
+    "+ show_image - wyświetla obraz\n",
+    "+ save_image - zapisuje obraz na dysk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_image(path):\n",
     "    image = cv2.imread(path, cv2.IMREAD_COLOR)\n",
     "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
@@ -26,8 +61,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Po wstępnych przygotowaniach można przejść do właściwego przetwarzania obrazu. Pierwszym krokiem jest załadowanie obrazu źródłowego."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,8 +91,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obraz oryginalny zapisany jest w formacie uwzględniającym kolory, wygodnie jest więc przekonwertować go do skali szarości"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +121,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obraz w skali szarości należy zprogować tak, aby uzyskać tylko widoczne drogi, bez zarysów budynków pomiędzy nimi"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +151,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dobrze widoczne drogi można poddać procesowi szkieletyzacji, sprowadzając je do postaci linii o grubości jednego piksela. W tym miejscu warto zauważyć, że wyświetlanie obrazów za pomocą biblioteki matplotlib nie zawsze dokładnie oddaje strukturę prawdziwych danych. W związku z tym otrzymane obrazy zapisuje się też na dysk, aby możliwe było dokładna obserwacja struktury pikseli już poza środowiskiem Jupyter."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +182,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Proces szkieletyzacji pozostawia po sobie niewielkie artefakty (np. jeden piksel przesunięty w lewo lub w prawo w stosunku do pozostałych pikseli drogi, na której leży), w związku z tym obraz należy oczyścić. Dla rozpatrywanego obrazu wystarczy zastosować procesy dylacji i erozji aby \"wygładzić\" obraz. Następnie zastosowano znów proces szkieletyzacji aby upewnić się, że droga nadal będzie miała tylko jeden piksel szerokości."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +212,27 @@
     "eroded = cv2.erode(dilated, kernel)\n",
     "sk2 = cv2.ximgproc.thinning(eroded, thinningType = cv2.ximgproc.THINNING_GUOHALL)\n",
     "show_image(sk2, \"Czyszczenie szkieletu\", cmap='gray')\n",
-    "\n",
     "save_image(sk2, \"szkielet2.png\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W tym miejscu kończy się właściwe przetwarzanie obrazu wejściowego. Wynikiem poprzednich działań jest obraz sieci dróg o szerokości jednego piksela, który należy przekonwertować do postaci grafu. Pierwszym krokiem jest znalezienie wszystkich węzłów grafu - w tym przypadku są to skrzyżowania i zakończenia linii. \n",
+    "Sprawdzenie, czy piksel jest zakończeniem linii jest proste - wystarczy, że ma tylko jednego \"aktywnego\" sąsiada. Sprawdzenie, czy piksel jest skrzyżowaniem jest bardziej skomplikowane - ilość sąsiadów musi być większa niż 3. Ponadto każdy aktywny piksel sąsiadujący musi mieć conajmniej jeden piksel przerwy od kolejnego aktywnego piksela, na przykład lista sąsiadów `[0, 1, 1, 0, 0, 1, 0, 0]` zawiera tak naprawdę tylko dwóch sąsiadów mimo trzech aktywnych pikseli. W związku z tym badany piksel nie jest skrzyżowaniem.\n",
+    "Do wykonania tego zadania konieczne jest zdefiniowanie kilku funkcji pomocniczych:\n",
+    "+ get_point - zwraca wartość piksela o danych współrzędnych. Jeśli takiego piksela nie ma (tzn. współrzędne wychodzą poza obszar obrazu) zwracana jest wartość 0\n",
+    "+ get_neighbours - zwraca wartości pikseli sąsiadujących z podanym. Zwrócona lista wartości pikseli jest ułożona zgodnie z ruchem wskazówek zegara względem piksela podanego.\n",
+    "+ count_neighbours - oblicza, ile pikseli z podanej listy ma wartość 255.\n",
+    "+ reduce_neighbours - redukuje listę sąsiadów tak, aby zamienić każdą grupę aktywnych pikseli na tylko jednego jej przedstawiciela. Jest to wymagane do poprawnego rozpoznania czy badany piksel jest skrzyżowaniem, co opisano wyżej.\n",
+    "+ is_crossroad i is_tip - sprawdzają, czy dany piksel jest skrzyżowaniem bądź zakończeniem drogi używając do tego funkcji opisanych powyżej.\n",
+    "+ dist - oblicza odległość pomiędzy pikselami"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,8 +290,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Po przygotowaniu funkcji pomocniczych można bez przeszkód zbadać każdy piksel obrazu pod kątem tego, czy przedstawia on węzel grafu. Znalezione węzły zostają dodane do listy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,14 +311,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na przykładowym obrazie zdarzało się, że dwa znalezione węzły leżały bardzo blisko siebie, tak naprawdę reprezentując tylko jedno skrzyżowanie. W związku z tym dla każdej pary punktów sprawdzana jest ich odległość od siebie. Jeśli jest ona zbyt mała - jeden z tych punktów jest usuwany z listy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "filtered_nodes = []\n",
     "distances = []\n",
     "rem = []\n",
+    "import itertools\n",
     "for pair in itertools.combinations(nodes, 2):\n",
     "    distances.append(dist(pair[0], pair[1]))\n",
     "    if dist(pair[0], pair[1]) < 2:\n",
@@ -236,8 +335,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ostatecznie można zaznaczyć wszystkie odnalezione węzły grafu na obrazie - najlepiej obejrzeć zapisany plik .png poza środowiskiem Jupyter."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +377,14 @@
     "    \n",
     "show_image(new_img, \"Skrzyzowania\")\n",
     "save_image(new_img, 'crossroads.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Po odnalezieniu wszystkich węzłów grafu trzeba jeszcze wyszukać krawędzie. Są one reprezentowane przez drogi, należy jednak wiedzieć, które krawędzie łączą się z którymi węzłami. Do tego celu wykorzystano bibliotekę pathfinding, która oferuje algorytmy wyszukiwania ścieżek. Sposób ich użycia będzie bardzo prosty - dla każdej pary węzłów sprawdzane jest, czy możliwe jest przejście od węzła pierwszego do drugiego po ścieżkach wyznaczonych przez drogi. Jeśli tak - istnieje krawędź łącząca oba węzły.\n",
+    "Aby znaleźć tylko krawędzie łączące węzły bezpośrednio obraz wejściowy dla algorytmu wyszukiwania drogi jest odpowiednio zmodyfikowany - wszystkie punkty, w których znajdują się węzły oraz ich piksele sąsiadujące są wygaszane. Operacja ta przerywa wszystkie drogi tak, że nie jest możliwe przechodzenie pomiędzy nimi. Następnie piksele węzłów badanych są zapalane, aby te konkretne przejścia umożliwić. "
    ]
   },
   {
@@ -310,148 +424,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "!!! found connection between node 0 and 16 !!!\n",
-      "!!! found connection between node 1 and 2 !!!\n",
-      "!!! found connection between node 3 and 11 !!!\n",
-      "!!! found connection between node 4 and 8 !!!\n",
-      "!!! found connection between node 5 and 8 !!!\n",
-      "!!! found connection between node 6 and 7 !!!\n",
-      "!!! found connection between node 6 and 8 !!!\n",
-      "!!! found connection between node 9 and 19 !!!\n",
-      "!!! found connection between node 10 and 12 !!!\n",
-      "!!! found connection between node 11 and 13 !!!\n",
-      "!!! found connection between node 11 and 17 !!!\n",
-      "!!! found connection between node 12 and 15 !!!\n",
-      "!!! found connection between node 12 and 17 !!!\n",
-      "!!! found connection between node 13 and 16 !!!\n",
-      "!!! found connection between node 13 and 20 !!!\n",
-      "!!! found connection between node 14 and 22 !!!\n",
-      "!!! found connection between node 16 and 19 !!!\n",
-      "!!! found connection between node 17 and 18 !!!\n",
-      "!!! found connection between node 18 and 25 !!!\n",
-      "!!! found connection between node 18 and 29 !!!\n",
-      "!!! found connection between node 19 and 21 !!!\n",
-      "!!! found connection between node 20 and 26 !!!\n",
-      "!!! found connection between node 20 and 29 !!!\n",
-      "!!! found connection between node 20 and 45 !!!\n",
-      "!!! found connection between node 21 and 22 !!!\n",
-      "!!! found connection between node 21 and 27 !!!\n",
-      "!!! found connection between node 22 and 28 !!!\n",
-      "!!! found connection between node 23 and 25 !!!\n",
-      "!!! found connection between node 23 and 34 !!!\n",
-      "!!! found connection between node 23 and 41 !!!\n",
-      "!!! found connection between node 24 and 34 !!!\n",
-      "!!! found connection between node 25 and 29 !!!\n",
-      "!!! found connection between node 27 and 36 !!!\n",
-      "!!! found connection between node 27 and 38 !!!\n",
-      "!!! found connection between node 29 and 45 !!!\n",
-      "!!! found connection between node 30 and 31 !!!\n",
-      "!!! found connection between node 31 and 33 !!!\n",
-      "!!! found connection between node 31 and 36 !!!\n",
-      "!!! found connection between node 32 and 35 !!!\n",
-      "!!! found connection between node 34 and 35 !!!\n",
-      "!!! found connection between node 35 and 47 !!!\n",
-      "!!! found connection between node 36 and 51 !!!\n",
-      "!!! found connection between node 37 and 38 !!!\n",
-      "!!! found connection between node 37 and 40 !!!\n",
-      "!!! found connection between node 37 and 43 !!!\n",
-      "!!! found connection between node 38 and 53 !!!\n",
-      "!!! found connection between node 39 and 42 !!!\n",
-      "!!! found connection between node 40 and 43 !!!\n",
-      "!!! found connection between node 40 and 49 !!!\n",
-      "!!! found connection between node 40 and 61 !!!\n",
-      "!!! found connection between node 41 and 47 !!!\n",
-      "!!! found connection between node 41 and 50 !!!\n",
-      "!!! found connection between node 41 and 76 !!!\n",
-      "!!! found connection between node 42 and 44 !!!\n",
-      "!!! found connection between node 42 and 48 !!!\n",
-      "!!! found connection between node 43 and 54 !!!\n",
-      "!!! found connection between node 43 and 61 !!!\n",
-      "!!! found connection between node 44 and 48 !!!\n",
-      "!!! found connection between node 44 and 51 !!!\n",
-      "!!! found connection between node 44 and 56 !!!\n",
-      "!!! found connection between node 45 and 46 !!!\n",
-      "!!! found connection between node 45 and 49 !!!\n",
-      "!!! found connection between node 46 and 50 !!!\n",
-      "!!! found connection between node 46 and 65 !!!\n",
-      "!!! found connection between node 47 and 55 !!!\n",
-      "!!! found connection between node 47 and 76 !!!\n",
-      "!!! found connection between node 49 and 62 !!!\n",
-      "!!! found connection between node 50 and 71 !!!\n",
-      "!!! found connection between node 51 and 52 !!!\n",
-      "!!! found connection between node 52 and 53 !!!\n",
-      "!!! found connection between node 52 and 59 !!!\n",
-      "!!! found connection between node 53 and 54 !!!\n",
-      "!!! found connection between node 54 and 60 !!!\n",
-      "!!! found connection between node 56 and 57 !!!\n",
-      "!!! found connection between node 57 and 58 !!!\n",
-      "!!! found connection between node 57 and 63 !!!\n",
-      "!!! found connection between node 59 and 60 !!!\n",
-      "!!! found connection between node 59 and 70 !!!\n",
-      "!!! found connection between node 60 and 68 !!!\n",
-      "!!! found connection between node 61 and 62 !!!\n",
-      "!!! found connection between node 61 and 68 !!!\n",
-      "!!! found connection between node 61 and 84 !!!\n",
-      "!!! found connection between node 62 and 64 !!!\n",
-      "!!! found connection between node 62 and 81 !!!\n",
-      "!!! found connection between node 64 and 65 !!!\n",
-      "!!! found connection between node 64 and 82 !!!\n",
-      "!!! found connection between node 65 and 71 !!!\n",
-      "!!! found connection between node 65 and 88 !!!\n",
-      "!!! found connection between node 66 and 72 !!!\n",
-      "!!! found connection between node 67 and 68 !!!\n",
-      "!!! found connection between node 67 and 70 !!!\n",
-      "!!! found connection between node 67 and 78 !!!\n",
-      "!!! found connection between node 68 and 85 !!!\n",
-      "!!! found connection between node 69 and 70 !!!\n",
-      "!!! found connection between node 69 and 75 !!!\n",
-      "!!! found connection between node 69 and 78 !!!\n",
-      "!!! found connection between node 69 and 80 !!!\n",
-      "!!! found connection between node 70 and 78 !!!\n",
-      "!!! found connection between node 71 and 76 !!!\n",
-      "!!! found connection between node 71 and 88 !!!\n",
-      "!!! found connection between node 72 and 74 !!!\n",
-      "!!! found connection between node 72 and 75 !!!\n",
-      "!!! found connection between node 73 and 86 !!!\n",
-      "!!! found connection between node 74 and 75 !!!\n",
-      "!!! found connection between node 75 and 93 !!!\n",
-      "!!! found connection between node 76 and 77 !!!\n",
-      "!!! found connection between node 77 and 83 !!!\n",
-      "!!! found connection between node 77 and 98 !!!\n",
-      "!!! found connection between node 78 and 79 !!!\n",
-      "!!! found connection between node 79 and 80 !!!\n",
-      "!!! found connection between node 79 and 85 !!!\n",
-      "!!! found connection between node 80 and 87 !!!\n",
-      "!!! found connection between node 81 and 82 !!!\n",
-      "!!! found connection between node 81 and 84 !!!\n",
-      "!!! found connection between node 82 and 90 !!!\n",
-      "!!! found connection between node 82 and 94 !!!\n",
-      "!!! found connection between node 83 and 86 !!!\n",
-      "!!! found connection between node 83 and 92 !!!\n",
-      "!!! found connection between node 84 and 85 !!!\n",
-      "!!! found connection between node 86 and 89 !!!\n",
-      "!!! found connection between node 86 and 100 !!!\n",
-      "!!! found connection between node 88 and 90 !!!\n",
-      "!!! found connection between node 88 and 91 !!!\n",
-      "!!! found connection between node 90 and 94 !!!\n",
-      "!!! found connection between node 90 and 95 !!!\n",
-      "!!! found connection between node 91 and 96 !!!\n",
-      "!!! found connection between node 91 and 97 !!!\n",
-      "!!! found connection between node 92 and 99 !!!\n"
-     ]
-    }
-   ],
+   "source": [
+    "Dla każdej pary węzłów wykonuje się powyższy algorytm. Dla każdej znalezionej dzięki niemu krawędzi zapisuje się węzły, z którymi jest powiązana oraz jej długość otrzymaną od algorytmu wyszukiwania ścieżki."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "edges = []\n",
     "node_range = range(0, len(filtered_nodes))\n",
+    "import itertools\n",
     "for pair in itertools.combinations(node_range, 2):\n",
     "    i = pair[0]\n",
     "    j = pair[1]\n",
@@ -464,8 +451,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wszystkie wymagane w celach projektu informacje zostały wydobyte z obrazu źródlowego. Można je przedstawić w dowolnej formie, na przykład macierzy sąsiedztwa. Macierz ta dla badanego przypadku będzie duża i rzadka, więc nie musi być to optymalna forma przeglądania informacji o grafie."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1077,8 +1071,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wygodniejsze jest przedstawienie grafu w postaci listy sąsiadów. Dla każdego węzła zdefiniowana została lista jego sąsiadów."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1199,8 +1200,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dla zobrazowania działania ekstrakcji grafu przygotowano metodę pozwalającą na zaznaczenie linii łączącej dwa dowolne węzły grafu. Dzięki temu można zaobserwować również krawędzie (jeśli zbadane zostaną sąsiadujące ze sobą węzły zgodnie z listą sąsiadów)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
